# Noor_-_Bangla_AI

./: .gitignore  CLAUDE.md  Cargo.toml  KNOWLEDGE_GRAPH.md  README.md
config/: edge.toml  edge_a100.toml  edge_kaggle.toml  edge_runpod.toml  max.toml  pro.toml  proxy.toml  proxy_a100.toml  proxy_gpu.toml  proxy_tiny.toml  proxy_tiny_burn.toml
crates/borno/: Cargo.toml
crates/borno/data/: .gitignore
crates/borno/data/corpus/: bangla_sample.txt
crates/borno/data/trained/: borno-merges.txt  borno-vocab.json  tokenizer.json
crates/borno/src/: bangla.rs  encoder.rs  lib.rs  pretokenize.rs  trainer.rs  vocab.rs
crates/borno/tests/: bangla_tests.rs  roundtrip_tests.rs
crates/noor-burn/: Cargo.toml
crates/noor-burn/src/: config.rs  data.rs  lib.rs  model.rs  training.rs
crates/noor-burn/src/layers/: attention.rs  block.rs  ffn.rs  mod.rs  moe.rs  norm.rs  ple.rs
crates/noor-cli/: Cargo.toml
crates/noor-cli/src/: main.rs
crates/noor-core/: Cargo.toml  build.rs
crates/noor-core/src/: backward.rs  config.rs  forward_cache.rs  gguf.rs  kernels.rs  lib.rs  model.rs  tensor.rs  tokenizer.rs
crates/noor-core/src/layers/: attention.rs  block.rs  embedding.rs  ffn.rs  mod.rs  moe.rs  norm.rs  parallel_ffn.rs  ple.rs  rope.rs
crates/noor-train/: Cargo.toml
crates/noor-train/src/: data.rs  eval.rs  lib.rs  offload.rs  training_loop.rs
crates/noor-train/src/optim/: mod.rs  muon.rs  qk_clip.rs  smebu.rs
data/train/: vocab.txt
docs/: 2026-04-06-noor-architecture-design.md  IMPLEMENTATION_PLAN.md  research-data-efficiency-2024-2026.md
docs/superpowers/plans/: 2026-04-06-borno-tokenizer.md
docs/superpowers/specs/: 2026-04-06-borno-tokenizer-design.md  2026-04-06-noor-self-training-design.md  2026-04-06-noor-training-efficiency-design.md  2026-04-06-noor-voice-design.md
kernels/zig/: build.zig  matmul.zig
notebooks/: kaggle_train.ipynb
paper/figures/: training_summary.md
scripts/: build_proxy_dataset.sh  extract_and_shard.sh  generate_bangla_synthetic.py  parquet_to_jsonl.py  plot_training.py  runpod_a100_full.sh  runpod_train.sh  setup_windows.ps1  stream_parquet_to_shard.sh
