[package]
name = "noor-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI binary for Noor: train, run, eval, bench, convert"

[[bin]]
name = "noor"
path = "src/main.rs"

[dependencies]
noor-core.workspace = true
noor-train.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
