[package]
name = "noor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core tensor library, model layers, and GGUF I/O for Noor"

[features]
zig_kernels = []
cblas = []      # auto-detected by build.rs: Accelerate on macOS, OpenBLAS on Windows/Linux

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cblas", "zig_kernels", "accelerate"))'] }

[dependencies]
serde.workspace = true
toml.workspace = true
rand.workspace = true
rand_distr.workspace = true
borno.workspace = true

[dev-dependencies]
approx = "0.5"
