[package]
name = "noor-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core tensor library, model layers, and GGUF I/O for Noor"

[features]
zig_kernels = []
cblas = []      # auto-detected by build.rs: Accelerate on macOS, OpenBLAS on Windows/Linux
cuda = ["dep:cudarc"]   # optional: NVIDIA GPU via cuBLAS (RTX 3060 / any CUDA device)

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("cblas", "zig_kernels", "accelerate", "cuda"))'] }

[dependencies]
serde.workspace = true
toml.workspace = true
rand.workspace = true
rand_distr.workspace = true
borno.workspace = true
cudarc = { version = "0.19", optional = true, features = ["cublas"] }

[dev-dependencies]
approx = "0.5"
